# dllm

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE.llama-cpp-rs  README.md  RELEASE_README.md  docker-compose.dev-gpu.yml  mise.toml  package.json  todo.md
.github/workflows/: ci.yml  cuda-runtime-images.yml  docker-images.yml  publish-dllm-images.yml  rebuild-cuda-runtime-bases.yml  release.yml
apps/web/: build.ts  dev-server.ts  index.html  package.json
apps/web/src/: App.tsx  index.css
apps/web/src/components/ui/: button.tsx  input.tsx  pubkey-badge.tsx
apps/web/src/lib/: api.ts  client.ts  types.ts  utils.ts
apps/web/src/pages/: Access.tsx  AdminActions.tsx  Audit.tsx  Credentials.tsx  Models.tsx  Moderation.tsx  Nodes.tsx  Overview.tsx  Peers.tsx  Playground.tsx
crates/dllm-cli/: Cargo.toml  README.md
crates/dllm-cli/src/: main.rs
crates/dllm-daemon/: Cargo.toml  README.md  build.rs
crates/dllm-daemon/src/: api.rs  audit.rs  budget.rs  embedded_runtime.rs  hardware_benchmark.rs  inference.rs  lib.rs  local_config.rs  main.rs  model_library.rs  peer_service.rs  rate_limit.rs
crates/dllm-daemon/tests/: embedded_runtime_tests.rs  lifecycle_tests.rs
crates/dllm-inference/: Cargo.toml
crates/dllm-inference/src/: embed.rs  fit.rs  generate.rs  lib.rs  openai.rs  resolve.rs  tokenize.rs
crates/dllm-inference/src/openai/: tools.rs
crates/dllm-llama-server/: Cargo.toml  LICENSE.llama-cpp-rs  README.md  build.rs
crates/dllm-llama-server/src/: main.rs  tools.rs
crates/dllm-probe/: Cargo.toml  README.md
crates/dllm-protocol/: Cargo.toml  README.md
crates/dllm-protocol/src/: lib.rs
crates/dllm-runtime/: Cargo.toml  README.md
crates/dllm-runtime/src/: backend.rs  lib.rs
crates/dllm-runtime/tests/: backend_selection.rs
crates/dllm-transport/: Cargo.toml  README.md
crates/dllm-transport/src/: auth.rs  evaluation.rs  lib.rs  peer.rs  protocol.rs  stream_handler.rs
crates/dllmd/: Cargo.toml
crates/dllmd/src/: api.rs  backup.rs  credentials.rs  inference.rs  lib.rs  main.rs  peer_service.rs
crates/dllmd/tests/: lifecycle_tests.rs
docker/: Dockerfile.cuda-runtime  Dockerfile.dllmd
docs/: PHASE0.md  PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  cpu-two-node-test.md  dllm-gpu-autoconfig-proposal.md  dllm-proposal.md  getting-started.md  gpu-native-test.md  gpu-two-node-test.md
docs/results/phase0-results/p04-boundary/: llama-rpc-trace.patch
docs/results/phase0-results/p04-forward/repetitions/baseline/run-3/: llamacpp-qwen2.5-14b-instruct-q4_k_m-00001-of-00003.txt
docs/results/phase0-results/p05-prefill/: comparison.json  llama-rpc-kv-trace.patch
docs/results/phase0-results/p05-prefill/baseline/: llamacpp-qwen2.5-14b-instruct-q4_k_m-00001-of-00003-prompt.txt  llamacpp-qwen2.5-14b-instruct-q4_k_m-00001-of-00003.txt
docs/results/phase0-results/p06-decode/: summary.json
docs/results/phase0-results/p07-api/: request.json  stream.headers  stream.sse  summary.json
docs/results/phase0-results/p08-faults/: cancel.curl.err  cancel.curl.metrics  cancel.sse  kill-worker0.curl.metrics  kill-worker0.result  kill-worker1.curl.metrics  long-request.json  stall-worker0.curl.metrics  stall-worker0.result  stall-worker1.curl.err  stall-worker1.result  stall-worker1.sse
docs/results/phase0-results/p09-lan/: ssh-throughput.txt  summary.json
docs/results/phase0-results/p10-baselines/: summary.json
docs/results/phase1-results/: benchmark-summary.json  final-summary.json
docs/results/phase1-results/p14-real-runtime/: summary.json
docs/results/phase1-results/p16-two-machine/: summary.json
docs/results/phase2-results/: final-summary.json
docs/results/phase2-results/p20-hardware-probes/: laptop.json
docs/results/phase2-results/p21-physical-replicas/: summary.json
docs/results/phase2-results/p24-laptop-runtime/: summary.json
docs/results/phase3-results/: final-summary.json
docs/results/phase3-results/p36-network-matrix/: summary.json
docs/results/phase4-results/p40-iroh-evaluation/: summary.json
docs/results/phase4-results/p40-libp2p-evaluation/: summary.json
docs/results/phase4-results/p41-transport-bindings/: summary.json
docs/results/phase4-results/p42-embedded-peer-network/: summary.json
docs/results/phase4-results/p43-authenticated-inference/: summary.json
docs/results/phase4-results/p44-listed-unlisted-discovery/: summary.json
docs/results/phase4-results/p45-request-access-policy/: summary.json
docs/results/phase4-results/p46-hosting-controls-and-moderation/: summary.json
docs/results/phase4-results/p47-acceptance-matrix/: summary.json
manifests/: gemma-3-1b-it-q4_k_m.yaml  qwen2.5-14b-instruct-q4_k_m.yaml
phase0-results/p04-forward/: comparison.json
phase0-results/p04-forward/repetitions/rpc/run-5/: llamacpp-qwen2.5-14b-instruct-q4_k_m-00001-of-00003-prompt.txt
phase0-results/p06-decode/: diagnostic-trace.patch
phase0-results/p07-api/: models.headers  models.json  stream.parsed.json
phase0-results/p08-faults/: kill-worker0.sse  kill-worker1.result  kill-worker1.sse  slow-consumer.body  slow-consumer.curl.err  slow-consumer.curl.metrics  stall-worker0.sse  stall-worker1.curl.metrics  summary.json
phase0-results/p09-lan/: inventory.txt  ping.txt  ssh-throughput-runs.txt
phase1-results/: benchmark-summary.json
phase1-results/p14-real-runtime/: summary.json
phase1-results/p15-security/: summary.json
phase2-results/p26-multi-network/: summary.json
phase3-results/: final-summary.json
phase3-results/p35-batching/: summary.json
phase3-results/p36-network-matrix/: summary.json
scripts/: fixture-runtime.py  llama-server-container  p43-local-demo.sh  p43-physical-test.sh  p43-runbook.md  package-native-runtime.sh
web/: index.html
