[package]
name = "dllm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dllmd = { path = "../dllmd" }
dllm-protocol = { path = "../dllm-protocol" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1"

[[bin]]
name = "dllm"
path = "src/main.rs"
