[package]
name = "dllm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
dllm-protocol.workspace = true
dllm-transport.workspace = true
dllm-daemon.workspace = true
ed25519-dalek.workspace = true
hex = "0.4"
rand.workspace = true
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
serde_json.workspace = true

[[bin]]
name = "dllm"
path = "src/main.rs"
