[package]
name = "dllm-llama-server"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
dllm-inference = { workspace = true, default-features = false }
actix-web = "4"
actix-multipart = "0.8"
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio.workspace = true
futures-util.workspace = true
# Optional dependencies pulled in by the `mtmd` feature (image URL fetch/decode).
base64 = { version = "0.22", optional = true }
reqwest = { version = "0.13", features = ["json"], optional = true }

[dev-dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }

[features]
default = ["mtmd"]
cuda = ["dllm-inference/cuda"]
metal = ["dllm-inference/metal"]
vulkan = ["dllm-inference/vulkan"]
mtmd = ["dllm-inference/mtmd", "dep:base64", "dep:reqwest"]

[[bin]]
name = "dllm-llama-server"
path = "src/main.rs"
