[package]
name = "dllm-llama-server"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
dllm-inference = { workspace = true, default-features = false }
actix-web = "4"
actix-multipart = "0.8"
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio.workspace = true
futures-util.workspace = true

[dev-dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }

[features]
default = ["mtmd"]
cuda = ["dllm-inference/cuda"]
metal = ["dllm-inference/metal"]
vulkan = ["dllm-inference/vulkan"]
mtmd = ["dllm-inference/mtmd"]

[[bin]]
name = "dllm-llama-server"
path = "src/main.rs"
