[package]
name = "dllm-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
libp2p-identity = { version = "0.2.13", features = ["peerid"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
