[package]
name = "dllm-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
libp2p-identity = { version = "0.2.13", features = ["peerid"] }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
