[package]
name = "dllm-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hex = "0.4"
libc = "0.2"
reqwest = { workspace = true, features = ["rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "time"] }

[dev-dependencies]
serde_yaml = "0.9"
tempfile = "3"
