[package]
name = "dllm-transport"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
dllm-protocol.workspace = true
ed25519-dalek.workspace = true
futures-util.workspace = true
libp2p = { version = "0.56.0", features = ["autonat", "cbor", "dcutr", "dns", "identify", "kad", "macros", "noise", "ping", "quic", "relay", "request-response", "serde", "tcp", "tokio", "yamux"] }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
rand.workspace = true
uuid.workspace = true
