[package]
name = "dllmd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
dllm-protocol = { path = "../dllm-protocol" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "dllmd"
path = "src/main.rs"
