[package]
name = "dllmd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
dllm-protocol = { path = "../dllm-protocol" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "dllmd"
path = "src/main.rs"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
