[package]
name = "dllmd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
dllm-protocol = { path = "../dllm-protocol" }
dllm-runtime = { path = "../dllm-runtime" }
dllm-transport = { path = "../dllm-transport" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures-util = "0.3"
hmac = "0.12"
libp2p = { version = "0.56.0", features = ["tokio"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }

[[bin]]
name = "dllmd"
path = "src/main.rs"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
